2004-10-29  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Added the 'qmakeapp' project template translated to QtRuby

2004-10-28  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Fixed Ruby KDE app and DCOP service templates so they work again.
 * Implemented a 'Character Coding' ruby project option

2004-10-27  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Implemented ruby class '@@' and '@' instance variables in the class browser. 

 * Ruby doesn't have declarations for class or instance variables, and so a variable is 'declared'
   when it is first  assigned to. So the first assignment encountered in the ruby source is used, 
   unless the variable is set in the iniitaiize() method when that is considered as the 'first'.

 * The type of the variable is inferred from the type of the thing on the rhs of the assignment to it.

2004-10-27  Amilcar Lucas <amilcar@kdevelop.org>
 Exclude non API classes from the doxygen API documentation. 
 Please use the "doxygen doxyfile" command to test it. 

2004-10-27 Alexander Dymo <adymo@kdevelop.org>
    The first step in creating RubyQt/Korundum RAD environment -
    started to implement KDevDesigner integration for Ruby:
    works: automatic and manual subclass creation;
    doesn't work: function adding, editing and removing.

2004-10-25  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Added a ruby DCOP service project template
 * Improved the kapp Korundum application framework. It configures, builds and installs
   a C++ top level stub, that starts the ruby app. The ruby scripts are located via the
   KStandardDirs/KInstance mechanism, in directory ..share/apps/<appname>
 * k_dcop and k_dcop_signals declarations are shown as slot and signal declarations in
   the class parser.
 * =begin to =end comments are ignored
 * Added icons for Ruby configure and run options. The Run button now starts the main program
   with the ruby '-C' option to switch to the main program's directory.